Used some empty value instead of null.